--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,4 +29,11 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <resource-ref>
+        <description>DB Connection</description>
+        <res-ref-name>jdbc/coffeeShopPos</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
 </web-app>
